データ　投稿

--- a/ios/marcopandaios/marcopandaios/Info.plist
+++ b/ios/marcopandaios/marcopandaios/Info.plist
@@ -43,5 +43,12 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>撮影するためにカメラにアクセスします。</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 </dict>
 </plist>
